[package]
name = "bevy_input_actionmap"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "mit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false }
pretty-type-name = "1.0"
